--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "bootstrap": "5.3.6",
     "bootswatch": "5.3.5",
     "dayjs": "1.11.13",
+    "money-market-bi": "file:",
     "ngx-infinite-scroll": "19.0.0",
     "rxjs": "7.8.2",
     "tslib": "2.8.1",
